--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
-    "require-dev": {
+    "require": {
         "phpunit/phpunit": "10"
+    },
+    "autoload": {
+      "classmap": [
+        "src"
+      ]
     }
 }
